[gd_scene load_steps=19 format=2]

[ext_resource path="res://Art/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Art/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Elements/Chat.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 0.501961 )

[sub_resource type="DynamicFont" id=9]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 38
extra_spacing_top = -20
extra_spacing_bottom = -20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 0.501961 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 0.501961 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.831373, 0.831373, 0.831373, 0.843137 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.054902, 0.054902, 0.054902, 0.580392 )

[sub_resource type="Theme" id=17]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 16 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=3]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_bottom = 10.0
bg_color = Color( 0.00784314, 0.0392157, 0.235294, 0 )
border_width_bottom = 300
border_color = Color( 0, 0, 0, 0.423529 )
border_blend = true

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.396078 )

[sub_resource type="DynamicFont" id=12]
size = 24
use_mipmaps = true
use_filter = true
extra_spacing_top = -20
extra_spacing_bottom = -20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.12549, 0.12549, 0.12549, 0.74902 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0.862745 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.823529, 0.823529, 0.823529, 0.858824 )

[node name="Chat" type="Control"]
mouse_filter = 2
script = ExtResource( 3 )

[node name="VChatContainer" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 830.0
rect_min_size = Vector2( 400, 300 )

[node name="HBoxContainer" type="HBoxContainer" parent="VChatContainer"]
margin_right = 500.0
margin_bottom = 20.0

[node name="MovePanel" type="Panel" parent="VChatContainer/HBoxContainer"]
margin_right = 442.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="VChatContainer/HBoxContainer/MovePanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.694118, 0.760784, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Чат"

[node name="MinimizeButton" type="Button" parent="VChatContainer/HBoxContainer"]
margin_left = 446.0
margin_right = 476.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
enabled_focus_mode = 0
text = "-"

[node name="ResizeButton" type="Panel" parent="VChatContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 500.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
mouse_default_cursor_shape = 11
custom_styles/panel = SubResource( 7 )

[node name="ChatRichLabel" type="RichTextLabel" parent="VChatContainer"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 797.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 17 )
custom_fonts/normal_font = SubResource( 3 )
custom_styles/normal = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "Добро пожаловать в чат!
Для вывода справки о чате введите /help
"
text = "Добро пожаловать в чат!
Для вывода справки о чате введите /help
"
scroll_following = true

[node name="MessageLineBox" type="HBoxContainer" parent="VChatContainer"]
margin_top = 801.0
margin_right = 500.0
margin_bottom = 830.0

[node name="MessageLineEdit" type="LineEdit" parent="VChatContainer/MessageLineBox"]
margin_right = 373.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
placeholder_text = "Сообщение..."

[node name="SendButton" type="Button" parent="VChatContainer/MessageLineBox"]
margin_left = 377.0
margin_right = 500.0
margin_bottom = 29.0
focus_mode = 0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.929412, 0.929412, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "Отправить"
icon_align = 1

[connection signal="gui_input" from="VChatContainer/HBoxContainer/MovePanel" to="." method="_on_MovePanel_gui_input"]
[connection signal="pressed" from="VChatContainer/HBoxContainer/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="gui_input" from="VChatContainer/HBoxContainer/ResizeButton" to="." method="_on_ResizeButton_gui_input"]
[connection signal="text_entered" from="VChatContainer/MessageLineBox/MessageLineEdit" to="." method="_on_MessageLineEdit_text_entered"]
[connection signal="pressed" from="VChatContainer/MessageLineBox/SendButton" to="." method="_on_SendButton_pressed"]
